[gd_scene load_steps=7 format=3 uid="uid://bum0b4pciql3y"]

[ext_resource type="Script" path="res://scripts/gameplay/building/building.gd" id="1_sniek"]
[ext_resource type="PackedScene" uid="uid://bc6t6j75uocvp" path="res://art/models/blue/building_market_blue.gltf" id="1_y5w7s"]
[ext_resource type="Resource" uid="uid://binh4o38jwlrl" path="res://resources/buildings/market.tres" id="2_a4gj7"]
[ext_resource type="PackedScene" uid="uid://dkhwym6d6kpln" path="res://art/models/neutral/building_stage_A.gltf" id="4_5fbi1"]
[ext_resource type="PackedScene" uid="uid://driwwbxdms2ir" path="res://art/models/neutral/building_stage_B.gltf" id="5_a6vwv"]
[ext_resource type="PackedScene" uid="uid://dxdj7npvbnhco" path="res://art/models/neutral/building_stage_C.gltf" id="6_juf3x"]

[node name="Market" type="Node3D" node_paths=PackedStringArray("_main_structure")]
script = ExtResource("1_sniek")
building_record = ExtResource("2_a4gj7")
_main_structure = NodePath("building_market_blue2")

[node name="building_market_blue2" parent="." instance=ExtResource("1_y5w7s")]

[node name="building_stage_A2" parent="." instance=ExtResource("4_5fbi1")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)

[node name="building_stage_B2" parent="." instance=ExtResource("5_a6vwv")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)

[node name="building_stage_C2" parent="." instance=ExtResource("6_juf3x")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
